--- a/index.html
+++ b/index.html
@@ -1,144 +1,314 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Happy Birthday Sachin</title>
-	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday">
-	<meta name="robots" content="index, follow" />
-	<link rel="author" href="http://www.github.com/sachin0987" /> 
-    <meta name="keywords" content="Birthday, Happy">
-    <meta property="og:type" content="E-Greeting" />
-    <meta property="og:image" content="favicon.ico" />
-    <meta property="og:description" content="Wish you a very Happy Birthday">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="loading.css">
-	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet/less" href="cake.less">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
+  <title>Happy Birthday Vani</title>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Happy Birthday">
+  <meta name="robots" content="index, follow" />
+  <meta name="keywords" content="Birthday, Happy">
+  <meta property="og:type" content="E-Greeting" />
+  <meta property="og:image" content="favicon.ico" />
+  <meta property="og:description" content="Wish you a very Happy Birthday">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
+ <style>
+
+
+.floating-hearts::before,
+.floating-hearts::after {
+  content: '💖';
+  position: fixed;
+  animation: floatHearts 10s linear infinite;
+  font-size: 30px;
+  z-index: 0;
+  color: pink;
+  opacity: 0.5;
+}
+
+.floating-hearts::after {
+  left: 80%;
+  animation-delay: 3s;
+  font-size: 40px;
+}
+
+@keyframes floatHearts {
+  0% {
+    top: 100%;
+    transform: translateX(0);
+  }
+  100% {
+    top: -10%;
+    transform: translateX(-100px);
+  }
+}
+
+
+.message p {
+  font-size: 20px;
+  margin-bottom: 20px;
+  line-height: 1.6;
+}
+
+.message strong {
+  color: #FF69B4;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+@keyframes fadeInMessage {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+ 
+ .carousel-container {
+  position: absolute;
+  top: 20%;
+  right: 30px;
+  width: 300px;
+  height: 400px;
+  perspective: 1000px;
+  z-index: 1000;
+}
+
+.carousel {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  animation: rotateCarousel 20s infinite linear;
+}
+
+.carousel-card {
+  width: 200px;
+  height: 120px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform-style: preserve-3d;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(8px);
+  border: 2px solid #fff;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+  transform-origin: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carousel-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+.glow-name {
+  color: #FF69B4;
+  text-shadow: 0 0 5px #FF69B4, 0 0 15px #FF69B4, 0 0 25px #FF69B4;
+  animation: pulseGlow 2s infinite;
+}
+
+@keyframes pulseGlow {
+  0%, 100% {
+    text-shadow: 0 0 5px #FF69B4, 0 0 15px #FF69B4;
+  }
+  50% {
+    text-shadow: 0 0 10px #FF1493, 0 0 25px #FF69B4;
+  }
+}
+.message {
+  transition: all 0.5s ease;
+}
+
+.message.hidden {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
+.final-love-message {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 24px;
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); opacity: 0.7; }
+  50% { transform: scale(1.1); opacity: 1; }
+  100% { transform: scale(1); opacity: 0.7; }
+}
+.final-love-message {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 24px;
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); opacity: 0.7; }
+  50% { transform: scale(1.1); opacity: 1; }
+  100% { transform: scale(1); opacity: 0.7; }
+}
+
+
+
+
+.carousel-card:nth-child(1) { transform: rotateY(0deg) translateZ(300px); }
+.carousel-card:nth-child(2) { transform: rotateY(72deg) translateZ(300px); }
+.carousel-card:nth-child(3) { transform: rotateY(144deg) translateZ(300px); }
+.carousel-card:nth-child(4) { transform: rotateY(216deg) translateZ(300px); }
+.carousel-card:nth-child(5) { transform: rotateY(288deg) translateZ(300px); }
+
+@keyframes rotateCarousel {
+  from { transform: rotateY(0deg); }
+  to { transform: rotateY(360deg); }
+}
+</style>
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="loading.css">
+  <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet/less" href="cake.less">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
 
 <body>
-	<div class="loading"></div>
-	<audio class="song" controls loop>
-        <source src="hbd1.mp3"></source>
-	   Your browser isn't invited for super fun audio time.
-    </audio>
-    <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">S</h2>
-    </div>
-    <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">A</h2>
-    </div>
-	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">C</h2>
-    </div>
-	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">H</h2>
-    </div>
-	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">I</h2>
-    </div>
-	<div class="balloons text-center" id="b6">
-    	<h2 style="color:#0719D4;">N</h2>
-    </div>
-    <img src="Balloon-Border.png" width="100%" class="balloon-border">
+  <div class="loading"></div>
+  <audio class="song" controls loop>
+    <source src="hbd1.mp3" />
+    Your browser isn't invited for super fun audio time.
+  </audio>
+
+  <!-- Balloons spelling "VANI ❤️ SREE" -->
+  <div class="balloons text-center" id="b1">
+    <h2 style="color:#F2B300;">V</h2>
+  </div>
+  <div class="balloons text-center" id="b2">
+    <h2 style="color:#0719D4;">A</h2>
+  </div>
+  <div class="balloons text-center" id="b3">
+    <h2 style="color:#D14D39;">N</h2>
+  </div>
+  <div class="balloons text-center" id="b4">
+    <h2 style="color:#8FAD00;">I</h2>
+  </div>
+  <div class="balloons text-center" id="b5">
+    <h2 style="color:#FF69B4;">❤️</h2> <!-- Heart to represent space -->
+  </div>
+  <div class="balloons text-center" id="b6">
+    <h2 style="color:#8FAD00;">💕 </h2>
+  </div>
+  <div class="balloons text-center" id="b7">
+    <h2 style="color:#8FAD00;">💕</h2>
+  </div>
  
+  <img src="Balloon-Border.png" width="100%" class="balloon-border">
 
-	<div class="container">
-		
-		<div class="row">
-			<div class="col-md-2 col-xs-2 bulb-holder">
-				<div class="bulb" id="bulb_yellow"></div>
-			</div>
-			<div class="col-md-2 col-xs-2 bulb-holder">
-				<div class="bulb" id="bulb_red"></div>
-			</div>
-			<div class="col-md-2 col-xs-2 bulb-holder">
-				<div class="bulb" id="bulb_blue"></div>
-			</div>
-			<div class="col-md-2 col-xs-2 bulb-holder">
-				<div class="bulb" id="bulb_green"></div>
-			</div>
-			<div class="col-md-2 col-xs-2 bulb-holder">
-				<div class="bulb" id="bulb_pink"></div>
-			</div>
-			<div class="col-md-2 col-xs-2 bulb-holder">
-				<div class="bulb" id="bulb_orange"></div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<img src="banner.png" class="bannar">
-			</div>
-		</div>
-		<div class="row cake-cover">
-			<div class="col-md-12 texr-center">
-				<div class="cake">
-				  <div class="velas">
-				    <div class="fuego"></div>
-				    <div class="fuego"></div>
-				    <div class="fuego"></div>
-				    <div class="fuego"></div>
-				    <div class="fuego"></div>
-				  </div>
-				  <div class="cobertura"></div>
-				  <div class="bizcocho"></div>
-				</div>
-			</div>
-		</div>
-		<div class="row message">
-			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>your message </p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sachin</p>
-				
-			</div>
-		</div>
-		<div class="navbar navbar-fixed-bottom">
-			<div class="row">
-				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
-					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
-				</div>
-			</div>
-			<!-- <div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div>
-			<div class="col-md-2">
-			</div> -->
-		</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_yellow"></div></div>
+      <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_red"></div></div>
+      <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_blue"></div></div>
+      <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_green"></div></div>
+      <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_pink"></div></div>
+      <div class="col-md-2 col-xs-2 bulb-holder"><div class="bulb" id="bulb_orange"></div></div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <img src="banner.png" class="bannar">
+      </div>
+    </div>
+
+    <div class="row cake-cover">
+      <div class="col-md-12 text-center">
+        <div class="cake">
+          <div class="velas">
+            <div class="fuego"></div>
+            <div class="fuego"></div>
+            <div class="fuego"></div>
+            <div class="fuego"></div>
+            <div class="fuego"></div>
+          </div>
+          <div class="cobertura"></div>
+          <div class="bizcocho"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row message">
+      <div class="col-md-12">
+        <p>Today is... a very special day for me, my love — the day the most beautiful soul was born. 💖</p>
+        <p>In every heartbeat, in every breath — I find a reason to love you more, my forever.</p>
+        <p>I'd like to wish you one more time</p>
+        <p>a very happy birthday <strong>Auindala Vani Sree</strong></p>
+      </div>
+    </div>
+
+    <div class="navbar navbar-fixed-bottom">
+      <div class="row">
+        <div class="col-md-6 text-center col-md-offset-3">
+          <button class="btn btn-primary" id="turn_on">Turn On Lights</button>
+          <button class="btn btn-primary" id="play">Play Music</button>
+          <button class="btn btn-primary" id="bannar_coming">Let's Decorate Together</button>
+          <button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
+          <button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever Made By Me</button>
+          <button class="btn btn-primary" id="light_candle">Lets Light The Candle Together</button>
+          <button class="btn btn-primary" id="wish_message">Happy Birthday My Love</button>
+          <button class="btn btn-primary" id="story">A message for you....</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script src="effect.js"></script>
+  <script>
 
 
-	</div>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-58229732-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <div class="carousel-container">
+    <div class="carousel">
+      <div class="carousel-card"><img src="gf5.jpg" alt="Image 1"></div>
+      <div class="carousel-card"><img src="gf11.jpg" alt="Image 2"></div>
+      <div class="carousel-card"><img src="gf17.jpg" alt="Image 3"></div>
+      <div class="carousel-card"><img src="gf13.jpg" alt="Image 4"></div>
+      <div class="carousel-card"><img src="gf14.jpg" alt="Image 5"></div>
+      <div class="carousel-card"><img src="gf15.jpg" alt="Image 6"></div>
+      <div class="carousel-card"><img src="gf16.jpg" alt="Image 7"></div>
+      <div class="carousel-card"><img src="gf17.jpg" alt="Image 8"></div>
+      <div class="carousel-card"><img src="gf18.jpg" alt="Image 9"></div>
+    </div>
+  </div>
+  
+  <div class="floating-hearts"></div>
+
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="effect.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-58229732-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </html>
